--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,22 @@
 @tailwind components;
 @tailwind utilities;
 
+.swiper-pagination-bullet {
+  width: 20px;
+  height: 20px;
+  text-align: center;
+  line-height: 20px;
+  font-size: 12px;
+  color: #000;
+  opacity: 1;
+  background: rgba(0, 0, 0, 0.2);
+}
+
+.swiper-pagination-bullet-active {
+  color: #fff;
+  background: #007aff;
+}
+
 @font-face {
   font-family: "PlusJakartaSans-ExtraBold";
   src: url("../../public/fonts/PlusJakartaSans-ExtraBold.ttf");
@@ -42,15 +58,26 @@
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
-.before-footer{
-  position: absolute;
-  left: calc(50% - -5px);
-  top: -15rem ;
-  width: 1300px;
-  border-radius: 10px;
-  background-color: #e45c16;
-  transform: translateX(-50%);
+
+
+.swiper-pagination-bullet {
+  width: 20px;
+  height: 20px;
+  text-align: center;
+  line-height: 20px;
+  font-size: 12px;
+  color: #000;
+  opacity: 1;
+  background: rgba(255, 0, 0, 0.2);
 }
 
-
-
+.swiper-pagination-bullet-active {
+  color: #fff;
+  background: #21bb3e;
+  height: 0.5rem;
+  --tw-bg-opacity: 1;
+    background-color: rgb(228 92 22 / var(--tw-bg-opacity));
+    width: 4rem;
+    border-radius: 9999px;
+    cursor: pointer;
+}
